--- a/patient-portel/src/app/landing-page/landing-page.component.css
+++ b/patient-portel/src/app/landing-page/landing-page.component.css
@@ -17,6 +17,12 @@
     color: #6c757d;
 }
 
+/* .specialities-slider {
+    display: flex;
+    overflow: hidden;
+    align-items: center;
+    padding: 0 15px;
+} */
 
 .speicality-item {
     display: flex;
@@ -51,7 +57,7 @@
     font-size: 1rem;
 }
 @import "~slick-carousel/slick/slick.css";
- @import "~slick-carousel/slick/slick-theme.css";
+@import "~slick-carousel/slick/slick-theme.css";
 /* General section styling */
 .section-doctor {
     padding: 60px 0;
