--- a/patient-portel/src/app/doctor-dashboard/doctor-dashboard.component.html
+++ b/patient-portel/src/app/doctor-dashboard/doctor-dashboard.component.html
@@ -2,7 +2,7 @@
     <div class="main-wrapper">
     
         <!-- Header -->
-        <app-header-common-doctors></app-header-common-doctors>
+        <!-- <app-header-common-doctors></app-header-common-doctors> -->
         <!-- /Header -->
         
         <!-- Breadcrumb -->
