--- a/patient-portel/src/app/home/header/header.component.html
+++ b/patient-portel/src/app/home/header/header.component.html
@@ -34,8 +34,9 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link header-login" href="login.html">login / Signup </a>
+                <a class="nav-link header-login" (click)="navigateToLogin()" style="cursor: pointer;">login / Signup</a>
             </li>
+            
         </ul>
     </nav>
 </header>
