--- a/patient-portel/src/app/login/login.component.html
+++ b/patient-portel/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+<!-- login.component.html -->
 <body class="account-page">
     <!-- Main Wrapper -->
     <div class="main-wrapper">
@@ -15,19 +16,19 @@
                         <div class="account-content">
                             <div class="row align-items-center justify-content-center">
                                 <div class="col-md-7 col-lg-6 login-left">
-                                    <img src="assets/img/login-banner.png" class="img-fluid" alt="Doccure Login">	
+                                    <img src="assets/img/login-banner.png" class="img-fluid" alt="Doccure Login">  
                                 </div>
                                 <div class="col-md-12 col-lg-6 login-right">
                                     <div class="login-header">
                                         <h3>Login <span>Doccure</span></h3>
                                     </div>
-                                    <form (submit)="onSubmit()">
+                                    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                                         <div class="form-group form-focus">
-                                            <input type="email" class="form-control floating" required>
+                                            <input type="email" class="form-control floating" formControlName="email" />
                                             <label class="focus-label">Email</label>
                                         </div>
                                         <div class="form-group form-focus">
-                                            <input type="password" class="form-control floating" required>
+                                            <input type="password" class="form-control floating" formControlName="password" />
                                             <label class="focus-label">Password</label>
                                         </div>
                                         <div class="text-right">
@@ -35,22 +36,22 @@
                                         </div>
                                         <button class="btn btn-primary btn-block btn-lg login-btn" type="submit">Login</button>
                                     </form>
-                                        <div class="login-or">
-                                            <span class="or-line"></span>
-                                            <span class="span-or">or</span>
+                                    <div class="login-or">
+                                        <span class="or-line"></span>
+                                        <span class="span-or">or</span>
+                                    </div>
+                                    <div class="row form-row social-login">
+                                        <div class="col-6">
+                                            <a href="#" class="btn btn-facebook btn-block"><i class="fab fa-facebook-f mr-1"></i> Login</a>
                                         </div>
-                                        <div class="row form-row social-login">
-                                            <div class="col-6">
-                                                <a href="#" class="btn btn-facebook btn-block"><i class="fab fa-facebook-f mr-1"></i> Login</a>
-                                            </div>
-                                            <div class="col-6">
-                                                <a href="#" class="btn btn-google btn-block"><i class="fab fa-google mr-1"></i> Login</a>
-                                            </div>
+                                        <div class="col-6">
+                                            <a href="#" class="btn btn-google btn-block"><i class="fab fa-google mr-1"></i> Login</a>
                                         </div>
-                                        <div class="text-center dont-have">
-                                            Don’t have an account?
-                                            <a href="javascript:void(0);" (click)="goToRegister()">Register</a>
-                                        </div>
+                                    </div>
+                                    <div class="text-center dont-have">
+                                        Don’t have an account?
+                                        <a href="javascript:void(0);" (click)="goToRegister()">Register</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -61,7 +62,7 @@
 
             </div>
 
-        </div>		
+        </div>    
         <!-- /Page Content -->
 
         <app-footer></app-footer>
