--- a/patient-portel/src/app/register/register.component.html
+++ b/patient-portel/src/app/register/register.component.html
@@ -1,3 +1,4 @@
+<!-- register.component.html -->
 <body class="account-page">
     <div class="main-wrapper">
       <app-header></app-header>
@@ -21,17 +22,17 @@
                     </div>
   
                     <!-- Register Form -->
-                    <form>
+                    <form [formGroup]="registerForm" (ngSubmit)="onSignup()">
                       <div class="form-group form-focus">
-                        <input type="text" class="form-control floating" />
+                        <input type="text" class="form-control floating" formControlName="username" />
                         <label class="focus-label">Name</label>
                       </div>
                       <div class="form-group form-focus">
-                        <input type="text" class="form-control floating" />
-                        <label class="focus-label">Mobile Number</label>
+                        <input type="text" class="form-control floating" formControlName="email" />
+                        <label class="focus-label">Email Address</label>
                       </div>
                       <div class="form-group form-focus">
-                        <input type="password" class="form-control floating" />
+                        <input type="password" class="form-control floating" formControlName="password" />
                         <label class="focus-label">Create Password</label>
                       </div>
                       <div class="text-right">
@@ -74,17 +75,17 @@
                     </div>
                     
                     <!-- Register Form -->
-                    <form (ngSubmit)="onSubmit()">
+                    <form [formGroup]="registerForm" (ngSubmit)="onSignup()">
                       <div class="form-group form-focus">
-                        <input type="text" class="form-control floating" [(ngModel)]="name" name="name" required>
+                        <input type="text" class="form-control floating" formControlName="username" required>
                         <label class="focus-label">Name</label>
                       </div>
                       <div class="form-group form-focus">
-                        <input type="text" class="form-control floating" [(ngModel)]="mobileNumber" name="mobileNumber" required>
-                        <label class="focus-label">Mobile Number</label>
+                        <input type="text" class="form-control floating" formControlName="email" required>
+                        <label class="focus-label">Email Address</label>
                       </div>
                       <div class="form-group form-focus">
-                        <input type="password" class="form-control floating" [(ngModel)]="password" name="password" required>
+                        <input type="password" class="form-control floating" formControlName="password" required>
                         <label class="focus-label">Create Password</label>
                       </div>
                       <div class="text-right">
