--- a/patient-portel/src/app/patient-dashboard-header/patient-dashboard-header.component.html
+++ b/patient-portel/src/app/patient-dashboard-header/patient-dashboard-header.component.html
@@ -17,14 +17,14 @@
             <a href="#">Patients <i class="fas fa-chevron-down"></i></a>
             <ul class="submenu">
                 <li><a href="javascript:void(0);" (click)="onsearchdoctor()">Search Doctor</a></li>
-                <li><a href="doctor-profile.html">Doctor Profile</a></li>
+                <!-- <li><a href="doctor-profile.html">Doctor Profile</a></li> -->
                 <li><a href="javascript:void(0);" (click)="onBookingClick()">Booking</a></li>
                 <!-- <li><a href="checkout.html">Checkout</a></li> -->
-                <li><a href="booking-success.html">Booking Success</a></li>
+                <li><a href="javascript:void(0);" (click)="onBookingsuccess()">Booking Success</a></li>
                 <li><a href="javascript:void(0);" (click)="onDashboard()">Patient Dashboard</a></li>
                 <li><a href="favourites.html">Favourites</a></li>
-                <li><a href="chat.html">Chat</a></li>
-                <li><a href="profile-settings.html">Profile Settings</a></li>
+                <li><a href="javascript:void(0);" (click)="onchat()">Chat</a></li>
+                <li><a href="javascript:void(0);" (click)="onprofilesettings()">Profile Settings</a></li>
                 <li><a href="change-password.html">Change Password</a></li>
             </ul>
         </li>	
