--- a/patient-portel/src/app/home/footer/footer.component.html
+++ b/patient-portel/src/app/home/footer/footer.component.html
@@ -88,7 +88,7 @@
                             </p>
                             <p class="mb-0">
                                 <i class="fas fa-envelope"></i>
-                                doccure@example.com
+                                doccureexample.com
                             </p>
                         </div>
                     </div>
